<?xml version="1.0"?>
<package>
  <name>lwpr</name>
  <version>1.0.0</version>
  <description>lwpr</description>
  <maintainer email="kalakris@todo.todo">kalakris</maintainer>
  <license>TODO</license>
  <build_depend>utilities</build_depend>
  <run_depend>utilities</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
